# Elastos

./: .appveyor.yml  .dockerignore  .drawbridgerc  .drone.yml  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .header.cfg  .header.txt  .npmignore  .project  .revive.toml  .travis.bak  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md
Carrier/: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMANDS.md  README.md  THANKS.md
Carrier/apps/: CMakeLists.txt  Makefile
Carrier/cmake/: AddSubModule.cmake  AndroidToolchain.cmake  CarrierDefaults.cmake  CarrierPackages.cmake  CheckBuildOptions.cmake  ExternalCMakeArgs.cmake  ExternalConfigureArgs.cmake  RPiToolchain.cmake  iOSToolchain.cmake
Carrier/config/: CMakeLists.txt  carrier.conf  carrier_config.c  carrier_config.h  check_config.c
Carrier/docker/: Dockerfile  HOWTO.md  README.md
Carrier/docs/: CMakeLists.txt  Makefile  README.md  make.bat
Carrier/src/: CMakeLists.txt  Makefile
Carrier/tests/: CMakeLists.txt  Makefile  config.c  config.h  elatests.sh  fix.sh.in  launcher.c  main.c  spopen.c  spopen.h  tests.conf
DID.Native.SDK/: CMakeLists.txt  LICENSE  README.md
DID.Native.SDK/adapter/: CMakeLists.txt
DID.Native.SDK/adaptor/: CMakeLists.txt
DID.Native.SDK/apps/: CMakeLists.txt
DID.Native.SDK/cmake/: AndroidToolchain.cmake  CheckBuildOptions.cmake  DistPackage.cmake  ExternalConfigureArgs.cmake  ProjectDefaults.cmake  iOSToolchain.cmake
DID.Native.SDK/docs/: CMakeLists.txt
DID.Native.SDK/hdkey/: BRNameFix.h  CMakeLists.txt  HDkey.c  HDkey.h  crypto.c  crypto.h  secp256k1_name_fix.h
DID.Native.SDK/python/: CMakeLists.txt  build.py  ela_did.ffi.h  ela_jwt.ffi.h
DID.Native.SDK/src/: CMakeLists.txt  credential.c  credential.h  credmeta.c  credmeta.h  did.c  did.h  didbackend.c  didbackend.h  diddocument.c  diddocument.h  diderror.c  diderror.h  didhistory.c  didhistory.h  didmeta.c  didmeta.h  didrequest.c  didrequest.h  didresolver.c  didresolver.h  didstore.c  didstore.h  ela_did.h  export.symbols  export.symbols.in  issuer.c  issuer.h  mnemonic.c  presentation.c  presentation.h
DID.Native.SDK/tests/: CMakeLists.txt  constant.c  constant.h  cred.json  cred_fromjson_test.c  cred_getelem_test.c  did_fromstring_test.c  did_getelem_test.c  diddoc_arelem_test.c  diddoc_base64_test.c  diddoc_fromjson_test.c  diddoc_getelem_test.c  diddoc_sign_test.c  didrequest_test.c  didstore_cred_op_test.c  didstore_did_op_test.c  didstore_initial_test.c  didstore_new_did_test.c  didstore_open_test.c  didstore_store_cred_test.c  didstore_store_did_test.c  didtest_adapter.c  didtest_adapter.h  loader.c  loader.h  privatekey_test.c  suites.h  tests.c
SPV.CPP/: CMakeConfig.h.in  CMakeLists.txt  Config.h.in  LICENSE  LICENSE.md  README.md  doxygen.sh
SPV.CPP/App/: Account.cpp  Account.h  SPVClient.cpp  Transaction.h  Util.cpp  Util.h  Wallet.h
SPV.CPP/CMake/: AddSubModule.cmake  AndroidToolchain.cmake  DistPackage.cmake  ExternalCMakeArgs.cmake  ExternalConfigureArgs.cmake  ProjectDefaults.cmake  RPiToolchain.cmake  iOSToolchain.cmake
SPV.CPP/Core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP39Mnemonic.c  BRBase58.c  BRBloomFilter.c  BRChainParams.c  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.c  BRInt.h  BRKey.c  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRPeerMessages.c  BRPeerMessages.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  CMakeLists.txt  secp256k1.cmake  test.c.sample
SPV.CPP/Data/: CoinConfig.json  Config.cfg  ELA_PeerConnection.json
SPV.CPP/Interface/: CMakeLists.txt  Enviroment.h  IBTCSubWallet.h  IElastosBaseSubWallet.h  IEthIDChainSubWallet.h  IEthSidechainSubWallet.h  IEthereumClientCallback.h  IIDAgent.h  IIDChainSubWallet.h  IIdAgent.h  IIdChainSubWallet.h  IMainchainSubWallet.h  IMasterWallet.h  IMasterWalletManager.h  ISidechainSubWallet.h  ISubWallet.h  ISubWalletCallback.h  ITokenChainSubWallet.h  ITokenchainSubWallet.h  IWalletFactory.h  IdChainSubWallet.h  MainchainSubWallet.h  MasterWalletManager.h  SidechainSubWallet.h  WalletFactory.h
SPV.CPP/Java/: BRCoreJni.c  BRCoreJni.h  CMakeLists.txt  JniHelpers.h  JniSmartPointerWrapper.h  com_elastos_spvcore_ChainParams.cpp  com_elastos_spvcore_ChainParams.h  com_elastos_spvcore_CoreAddress.c  com_elastos_spvcore_CoreAddress.h  com_elastos_spvcore_CoreChainParams.c  com_elastos_spvcore_CoreChainParams.h  com_elastos_spvcore_CoreJniReference.c  com_elastos_spvcore_CoreJniReference.h  com_elastos_spvcore_CoreKey.c  com_elastos_spvcore_CoreKey.h  com_elastos_spvcore_CoreMasterPubKey.c  com_elastos_spvcore_CoreMasterPubKey.h  com_elastos_spvcore_CoreMerkleBlock.c  com_elastos_spvcore_CoreMerkleBlock.h  com_elastos_spvcore_CorePaymentProtocol.c  com_elastos_spvcore_CorePaymentProtocol.h  com_elastos_spvcore_CorePaymentProtocolACK.h  com_elastos_spvcore_CorePaymentProtocolDetails.h  com_elastos_spvcore_CorePaymentProtocolEncryptedMessage.h  com_elastos_spvcore_CorePaymentProtocolInvoiceRequest.h  com_elastos_spvcore_CorePaymentProtocolMessage.h  com_elastos_spvcore_CorePaymentProtocolPayment.h  com_elastos_spvcore_CorePaymentProtocolPaymentACK.h  com_elastos_spvcore_CorePaymentProtocolRequest.h  com_elastos_spvcore_CorePeer.c  com_elastos_spvcore_CorePeer.h  com_elastos_spvcore_CorePeerManager.c  com_elastos_spvcore_CorePeerManager.h  com_elastos_spvcore_CoreTransaction.c  com_elastos_spvcore_CoreTransaction.h  com_elastos_spvcore_CoreTransactionInput.c  com_elastos_spvcore_CoreTransactionInput.h  com_elastos_spvcore_CoreTransactionOutput.c  com_elastos_spvcore_CoreTransactionOutput.h  com_elastos_spvcore_CoreWallet.c  (+7 more)
SPV.CPP/SDK/: CMakeLists.txt  PreCompiled.h  SPVSDK.cpp  SPVSDK.h
SPV.CPP/Sample/: Account.h  CMakeLists.txt  Sample.cpp  TWallet.cpp  TWallet.h  TestConnectPeer.cpp  TestConnectPeer.h  TestWallet.cpp  TestWallet.h  TestWalletManager.cpp  TestWalletManager.h  Transaction.cpp  Transaction.h  Util.h  Wallet.cpp  Wallet.h
(+11227 files in other folders)
